--- a/Main.xaml
+++ b/Main.xaml
@@ -66,7 +66,7 @@
         <OutArgument x:TypeArguments="x:Int32">[Var2]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <ui:InputDialog Options="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="497,92" sap2010:WorkflowViewState.IdRef="InputDialog_3" IsPassword="False" Label="Operation" Title="Please choose Operation from 1 to 4. 1: Addition, 2: Subtract, 3: Multiplication, 4: Division">
+    <ui:InputDialog Options="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="497,92" sap2010:WorkflowViewState.IdRef="InputDialog_3" IsPassword="False" Label="Please choose Operation from 1 to 4. 1: Addition, 2: Subtraction, 3: Multiplication, 4: Division" Title="Operation">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:Int32">[Operation]</OutArgument>
       </ui:InputDialog.Result>
